--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -245,10 +245,13 @@ h1,h2,h3,h4,h5
 #work .media .media-heading
     {
         font-weight: 600;
-        font-size: 20px;
+        font-size: 16px;
         padding-bottom: 10px;
     }
-
+#work .para
+    {
+        font-size: 14px;
+    }
 #work .btn
     {
         background: transparent;
